--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ esp-hal-smartled = "0.17.0"
 esp32c6 = "0.22.0"
 smart-leds = "0.4.0"
 embassy-sync = "0.7.2"
+ssd1306 = "0.10.0"
+embedded-graphics = { version = "0.8.1", features = ["defmt"] }
 
 
 [profile.dev]
