--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ smart-leds = "0.4.0"
 embassy-sync = "0.7.2"
 ssd1306 = "0.10.0"
 embedded-graphics = { version = "0.8.1", features = ["defmt"] }
+numtoa = "0.3.1"
 
 
 [profile.dev]
