--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ sntpc = { version = "0.8.1", default-features = false,  features = ["defmt"] }
 sntpc-net-embassy = { version = "0.8.0", default-features = false,  features = ["defmt"] }
 chrono = { version = "0.4", default-features = false}
 heapless = { version = "0.7.15", features = ["serde"] }
+thiserror-no-std = "2.0.2"
 
 [profile.dev]
 # Rust debug is too slow.
