--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,6 @@ critical-section = "1.2.0"
 static_cell      = "2.1.1"
 esp32c6 = "0.22.0"
 embassy-sync = "0.7.2"
-ssd1306 = "0.10.0"
 embedded-graphics = { version = "0.8.1", features = ["defmt"] }
 numtoa = "0.3.1"
 libm = "0.2.15"
@@ -41,6 +40,9 @@ heapless = { version = "0.7.15", features = ["serde"] }
 thiserror-no-std = "2.0.2"
 no-std-net = "0.6.0"
 display-interface = { version = "0.5.0", features = ["defmt-03"] }
+embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
+st7735-lcd = "0.10.0"
+embedded-hal-bus = { version = "0.3.0", features = ["defmt-03"] }
 
 [profile.dev]
 # Rust debug is too slow.
